Update for new curriculum on FCC

--- a/index.html
+++ b/index.html
@@ -17,47 +17,97 @@
     <header></header>
 
     <div class="jumbotron-fluid">
-      <div class="container">
-        <div class="row tribute-summary">
+      <div id="main" class="container">
+        <div id="img-div" class="row tribute-summary">
           <div class="col-md col-lg-4 text-center">
-            <img src="https://farm1.staticflickr.com/826/41076284965_9b14c7db49_b.jpg" class="profile-img" title="Nymeria Da Bear, German Shepherd Dog" alt="Nymeria Da Bear, German Shepherd Dog" />
+            <img id="image" src="https://farm1.staticflickr.com/831/41501029144_bbc91a4724.jpg" class="profile-img" title="Nymeria Da Bear, German Shepherd Dog" alt="Nymeria Da Bear, German Shepherd Dog" />
           </div>
           <div class="col-md col-lg-8 summary">
-            <h1 class="title">Nymeria Da Bear</h1>
+            <h1 id="title" class="title">Nymeria Da Bear</h1>
             <h2>"Greatest Puppy Ever!" -self-quote</h2>
-            <p>Nymeria Da Bear is a German Shepherd dog born in Ontario, Canada. She just recently turned 4 years old on March 30th, 2018. She enjoys playing off-leash with other dogs or in a park with her soccer ball and frisbees. She has taken obedience classes and scent detection courses. She is currently on a diet to lose some winter weigth.</p>
+            <p id="img-caption">Nymeria Da Bear is a German Shepherd dog born in Ontario, Canada. She just recently turned 4 years old on March 30th, 2018. She enjoys playing off-leash with other dogs or in a park with her soccer ball and frisbees. She has taken obedience classes and scent detection courses. She is currently on a diet to lose some winter weigth.</p>
           </div>
         </div>
-        <div class="row">
+        <div id="tribute-info" class="row">
           <div class="col-md-6 timeline">
             <h1 class="title">Timeline</h1>
             <p>The following is a timeline of Nymeria's life thus far:</p>
-            <ul>
-              <li><strong>Mar, 2014</strong>: Nymeria is born near London, Ontario</li>
-              <li><strong>Jul, 2014</strong>: Nymeria is brought to our home</li>
-              <li><strong>Sep, 2014</strong>: Nymeria is enrolled in Obedience Training</li>
-              <li><strong>Jan, 2015</strong>: Nymeria moves on to Level Two Obedience training</li>
-              <li><strong>Feb, 2015</strong>: Nymeria enrolls in scent detection</li>
-              <li><strong>May, 2015</strong>: Nymeria competes in her first scent detection trial</li>
-              <li><strong>Sep, 2015</strong>: Nymeria competes in another scent detection trial</li>
-              <li><strong>May, 2016</strong>: Nymeria competes in another scent detection trial</li>
-              <li><strong>Mar, 2017</strong>: Nymeria competes in another scent detection trial</li>
-              <li><strong>Jul, 2017</strong>: Nymeria is the flower girl for our wedding</li>
-            </ul>
+            <table>
+              <tr>
+                <th>Date</th>
+                <th>Event</th>
+              </tr>
+              <tr>
+                <td>March 30, 2014</td>
+                <td>Nymeria is born near London, Ontario</td>
+              </tr>
+              <tr>
+                <td>July 2014</td>
+                <td>Nymeria is brought to our home</td>
+              </tr>
+              <tr>
+                <td>September 2014</td>
+                <td>Nymeria is enrolled in Obedience Training</td>
+              </tr>
+              <tr>
+                <td>January 2015</td>
+                <td>Nymeria moves on to Level Two Obedience training</td>
+              </tr>
+              <tr>
+                <td>February 2015</td>
+                <td>Nymeria enrolls in scent detection</td>
+              </tr>
+              <tr>
+                <td>May 2015</td>
+                <td>Nymeria competes in her first scent detection trial</td>
+              </tr>
+              <tr>
+                <td>September 2015</td>
+                <td>Nymeria competes in another scent detection trial</td>
+              </tr>
+              <tr>
+                <td>May 2016</td>
+                <td>Nymeria competes in another scent detection trial</td>
+              </tr>
+              <tr>
+                <td>March 2017</td>
+                <td>Nymeria competes in another scent detection trial</td>
+              </tr>
+              <tr>
+                <td>July 2017</td>
+                <td>Nymeria is the flower girl for our wedding</td>
+              </tr>
+            </table>
           </div>
           <div class="col-md-6 achievements">
             <h1 class="title">Achievements</h1>
             <p>Nymeria's Achievements in obedience and scent detection:</p>
-            <ul>
-              <li><strong>Dec 2014</strong>: Nymeria completes her Level One Obedience training</li>
-              <li><strong>Feb 2015</strong>: Nymeria completes her Level Two Obedience training</li>
-              <li><strong>May 2015</strong>: Nymeria completes her Novice Level Scent Detection</li>
-              <li><strong>May 2016</strong>: Nymeria completes her Beginner Level Scent Detection</li>
-            </ul>
+            <table>
+              <tr>
+                <th>Date</th>
+                <th>Event</th>
+              </tr>
+              <tr>
+                <td>December 2014</td>
+                <td>Nymeria completes her Level One Obedience training</td>
+              </tr>
+              <tr>
+                <td>February 2015</td>
+                <td>Nymeria completes her Level Two Obedience training</td>
+              </tr>
+              <tr>
+                <td>May 2015</td>
+                <td>Nymeria completes her Novice Level Scent Detection</td>
+              </tr>
+              <tr>
+                <td>May 2016</td>
+                <td>Nymeria completes her Beginner Level Scent Detection</td>
+              </tr>
+            </table>
           </div>
         </div>
-        <div class="row">
-          <h3>If you would like to see some video's of Nymeria, you can check out her <a href="https://www.youtube.com/user/NymeriaDaBear" target="_blank" rel="noopener">YouTube</a> page.
+        <div class="row link">
+          <h3>If you would like to see some video's of Nymeria, you can check out her <a id="tribute-link" href="https://www.youtube.com/user/NymeriaDaBear" target="_blank" rel="noopener">YouTube</a> page.
         </div>
       </div>
     </div>
